Fix links overflow

--- a/web/src/code/Links/Styles.module.css
+++ b/web/src/code/Links/Styles.module.css
@@ -6,6 +6,7 @@
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 1.2rem;
   grid-row-gap: 1.2rem;
+  overflow-wrap: anywhere;
 }
 
 .Button {
